--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
